2008-06-02  David Bateman  <dbateman@free.fr>

	* floatAEPBAL.cc (octave_idx_type FloatAEPBALANCE::init (const
	FloatMatrix&, const std::string&)): Use FloatMatrix to initialize
	balancing_mat.

	* Makefile.in (MATRIX_INC): Add fCmplxAEPBAL.h and floatAEPBAL.h.
	(MATRIX_SRC): Add fCmplxAEPBAL.cc and floatAEPBAL.cc.

2008-05-21  David Bateman  <dbateman@free.fr>

	* Quad-opts.in: Handle single precision tolerances.
	* Quad.cc (float_user_fcn): New static variable.
	(quad_float_fcn_ptr): New typedef.
	(qagp, quagi): New QUADPACK decls.
	(float_user_function): New function.
	(DefQuad::do_integrate, IndefQuad::do_integrate): Float versions.
	(FloatDefQuad::do_integrate, FloatIndefQuad::do_integrate):
	New functions.
	* Quad.h (class Quad): Handle float type.
	(class FloatDefQuad, class FloatIndefQuad): New classes.

2008-05-21  Jaroslav Hajek <highegg@gmail.com>

	* fCMatrix.h (xgemm): Provide decl.
	(xcdotc, csyrk, cherk): New F77 decls.
	* fMatrix.cc (xgemm): New function.
	(operator * (const FloatMatrix&, const FloatMatrix&)): Simplify.
	(get_blas_trans_arg): New function.
	* fCMatrix.h (xgemm): Provide decl.
	(ssyrk): New F77 decl.
	* fCMatrix.cc (xgemm): New function.
	(operator * (const FloatComplexMatrix&, const
	FloatComplexMatrix&)): Simplify.
	(get_blas_trans_arg): New function.

	* dMatrix.cc, CMatrix.cc, Sparse-op-defs.h: Add missing copyright.

	* Sparse-op-defs.h (SPARSE_FULL_MUL): Simplify scalar*matrix case.
	Correct indenting. 
	(SPARSE_FULL_TRANS_MUL): New macro.
	(FULL_SPARSE_MUL): Simplify scalar*matrix case. Correct indenting.
	Move OCTAVE_QUIT one level up.
	(FULL_SPARSE_MUL_TRANS): New macro.
	* dSparse.h (mul_trans, trans_mul): Provide decl.
	* dSparse.cc (mul_trans, trans_mul): New functions.
	* CSparse.h (mul_trans, trans_mul, mul_herm, herm_mul): Provide decl.
	* CSparse.cc (mul_trans, trans_mul, mul_herm, herm_mul): New functions.

	* dMatrix.h (xgemm): Provide decl.
	* dMatrix.cc (xgemm): New function.